--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jsdelivr",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"author": {
 		"name": "Dmitriy Akulov",
 		"email": "dak@prospectone.pl"
@@ -8,7 +8,8 @@
 	"keywords": [
 		"ghost-theme"
 	],
-	"engines": {
-		"ghost-api": "v4"
+	"config":{
+		"posts_per_page": 5,
+		"card_assets": true
 	}
 }
